--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "app_id": "wxf4573e176b8bc78f",
   "app_secret": "5ec716abe5464969ebf4f024318b5ab0",
   "template_id": "DQguyhRViBME1VLBVMBK9y1JBQm08xixtKwHJPwTI-s",
-  "user": ["oiWPv7FF_07xHN2FWkPRMEidehAU", "oiWPv7OTMpaUfQhZssXytG0DNVxQ"],
+  "user": ["oiWPv7G8SeljybW4qEXy-ugVtiRA"],
   "weather_key": "cc0d906f028d4ab39ee1f2f11fcc3a49",
   "region": "北京市昌平区",
   "birthday1": {"name": "袁静", "birthday": "2000-09-03"},
